# Something

./: .shell_aliases  .zshrc  23.貪食蛇4.cpp  Bluetooth_LED_RGB.ino  CMakeLists.txt  _1.Snake.ino
nvim/: coc-settings.json  init.vim
nvim/config/: keybinds.vim  plug.vim
nvim/lua/: basic.lua  keybindings.lua  plugins.lua
nvim/lua/lsp/: setup.lua
nvim/lua/plugin-config/: alpha.lua  nvim-tree.lua  nvim-treesitter.lua  toggleterm.lua
nvim/plugin/: packer_compiled.lua
shell/: .shell_aliases  Microsoft.PowerShell_profile.ps1  starship.toml
state_diagram/: assignment.drawio  iLearn.drawio  未命名绘图.drawio
tmux/: tmux.conf
vscode/: settings.json
備審資料/: 23.貪食蛇4.cpp  _1.Snake.ino  robotLineFollowing.ino
